# docvert

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.md  installation-guide.md  manual.md  web-manual-ko.md
docs/agents/: README.md
docs/architecture-decision-records/: 0001-parser-choices.md
docs/coderabbit/: review-commands.md
docs/engineering/: acceptance-criteria.md  harness-engineering.md
docs/operations/: deploy-runbook.md  offline-release-runbook.md
docs/workflow/: one-day-delivery-plan.md  pr-continuity.md
docvert/: __init__.py
docvert/agent/: __init__.py  refiner.py
docvert/cli/: __init__.py  main.py
docvert/core/: batch.py  writer.py
docvert/models/: config.py  document.py
docvert/parsers/: docx_parser.py  pdf_parser.py
scripts/: build_offline_bundle.sh
tests/: test_agent.py  test_batch_images.py  test_cli.py  test_core.py  test_image_feature.py  test_main.py  test_models.py  test_parsers.py
