[project]
name = "docvert"
version = "0.2.1"
description = "Docvert: Convert documents to Markdown"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.82.0",
    "litellm>=1.83.0",
    "loguru>=0.7.3",
    "mammoth>=1.12.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-docx>=1.2.0",
    "unstructured>=0.22.6",
]

[project.scripts]
docvert = "docvert.cli.main:main"

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "live: marks tests that require external live services (e.g. OpenAI API)",
]
